Wordpress Site Perso MySQL 5.7.21

--- a/sitePersoWordpress/.htaccess
+++ b/sitePersoWordpress/.htaccess
@@ -1,8 +1,7 @@
+#This Apache config file was created by Duplicator Installer on 2020-05-06 11:04:18.
+#The original can be found in archived file with the name .htaccess__[HASH]
 
 # BEGIN WordPress
-# Les directives (lignes) entre 'BEGIN WordPress' et 'END WordPress' sont
-# généré dynamiquement, et ne doivent uniquement être modifiées via les filtres WordPress.
-# Toute modification des directives entre ces marqueurs sera outrepassée.
 <IfModule mod_rewrite.c>
 RewriteEngine On
 RewriteBase /
@@ -11,5 +10,4 @@ RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule . /index.php [L]
 </IfModule>
-
 # END WordPress
